# PyAV

./: .buildinfo  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis-setup  .travis.yml  AGENTS.md  AUTHORS.py  AUTHORS.rst  AUTHORS.txt  CHANGELOG.md  CHANGELOG.rst  HACKING.md  HACKING.rst  HACKING.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  TODO.txt  VERSION.txt  Vagrantfile  api.html  appveyor.yml  autolint.py  config.py.in  configure.ac  data.ts  deployment.bat  dev-requirements.txt  extract_docstring.py  ffmpegmodule.c  flags.txt  genindex.html  index.html  lib_compat.h  objects.inv  py-modindex.html  (+5 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  build-bug-report.md  ffmpeg-feature-request.md  pyav-feature-request.md  runtime-bug-report.md  user-help.md
.github/workflows/: build-ffmpeg.yml  issues.yml  ruff.yml  smoke.yml  test.yml  tests.yml
_modules/: index.html
_sources/: api.txt
_sources/api/: codec.txt  format.txt
api/: codec.html  format.html
av/: __init__.py  __init__.pyi  __main__.py  _core-shims.c  _core.pxd  _core.py  _core.pyi  _core.pyx  _hwdevice_registry.py  about.py  bitstream.pxd  bitstream.py  bitstream.pyi  bitstream.pyx  buffer.pxd  buffer.py  buffer.pyi  buffer.pyx  buffered_decoder.pxd  buffered_decoder.pyx  bytesource.pxd  bytesource.pyx  class_.pxd  class_.pyx  codec.pxd  codec.pyx  codeccontext.pxd  codeccontext.pyx  container.pxd  container.pyx  context.pxd  context.pyx  core.pyx  datasets.py  decode.pxd  decode.pyx  deprecation.py  descriptor.pxd  descriptor.py  descriptor.pyi  (+81 more)
av/attachments/: codeccontext.pxd  codeccontext.pyi  codeccontext.pyx  stream.pxd  stream.pyi  stream.pyx
av/audio/: __init__.py  __init__.pyi  codec.pxd  codec.pyx  codeccontext.pxd  codeccontext.py  codeccontext.pyi  codeccontext.pyx  fifo.pxd  fifo.py  fifo.pyi  fifo.pyx  format.pxd  format.py  format.pyi  format.pyx  frame.pxd  frame.py  frame.pyi  frame.pyx  layout.pxd  layout.py  layout.pyi  layout.pyx  plane.pxd  plane.py  plane.pyi  plane.pyx  resampler.pxd  resampler.py  resampler.pyi  resampler.pyx  stream.pxd  stream.py  stream.pyi  stream.pyx  swrcontext.pxd  swrcontext.pyx
av/bitstream/: __init__.py  context.pyx  filter-shims.c  filter.pyx
av/codec/: __init__.py  base.pxd  codec-shims.c  codec.pxd  codec.py  codec.pyi  codec.pyx  context.pxd  context.py  context.pyi  context.pyx  hwaccel.pxd  hwaccel.py  hwaccel.pyi  hwaccel.pyx
av/container/: .core.pyx.swp  __init__.py  __init__.pyi  core.pxd  core.py  core.pyi  core.pyx  input.pxd  input.py  input.pyi  input.pyx  output.pxd  output.py  (+9 more)
conda-recipe/: build.sh  meta.yaml
docs/: Makefile  about.rst  api.rst  changelog.rst  conf.py  contributors.rst  error_table.py  examples.rst  generate-tagfile  hacking.rst  includes.py  index.rst  installation.rst  license.rst  requirements.txt  upload
examples/: __init__.py  audio.py  audio_atempo.py  audio_player.py  average.py  dealloc.py  decode.py  decode_threads.py  dump_format.py  dump_frames.py  dump_subtitles.py  encode.py  encode_frames.py  experimental.py  fifo.py  filmstrip.py  filter_audio.py  frame_seek_example.py  gen_rgb_rotate.py  glproxy.py  log.py  merge-filmstrip.py  player.py  qtproxy.py  reddit_pipe.py  reddit_pyav.py  resource_use.py  save_frames.py  save_subtitles.py  second_seek_example.py  seek.py  show_frames_opencv.py  simple_video_wrapper.py  times.py  tutorial.py  tutorial_muxing.py
headers/: compat.h  compat.pxd  libav-audio-formats.pxd  libav-audio-layouts.pxd  libav.pxd  libavcodec.pxd  libavcodec_compat.h  libavfilter.pxd  libavformat.pxd  libavformat_compat.h  libavformat_shim.h  libavutil.pxd  libswresample.pxd  libswresample_compat.h  libswscale.pxd  project_fork_shim.h  project_fork_shim.pxd
include/: avcodec.pxd  avdevice.pxd  avfilter.pxd  avformat.pxd  avutil.pxd  dlpack.pxd  libav.pxd  libav.pyav.h  libavcodec.pxd  libavcodec_compat.h  libavformat.pxd  libavformat_compat.h  libavutil_compat.h  libswresample.pxd  libswresample_compat.h
notes/: todo.__unsorted__.txt  todo.codec-ctx.txt  todo.filters.txt  todo.time.txt
patches/: fontconfig.patch  gmp.patch  gnutls.patch  harfbuzz.patch  lame.patch  openh264.patch  opus.patch  twolame.patch  vorbis.patch  vpx.patch  x265.patch
scratchpad/: README  __init__.py  audio.py  audio_player.py  average.py  cctx_decode.py  cctx_encode.py  container-gc.py  decode.py  decode_threads.py  email-2018-09-07.py  encode.py  encode_frames.py  filter_audio.py  frame_seek_example.py  glproxy.py  graph.py  memleak.py  parse.py  player.py  qtproxy.py  remux.py  resource_use.py  save_subtitles.py  second_seek_example.py  seekmany.py  show_frames_opencv.py  sidedata.py  test.pxd  walkprobe.py
scripts/: activate.sh  auditwheel-cross.py  autolint  build  build-armv7l-cross.sh  build-debug-python  build-deps  build-ffmpeg  build-ffmpeg.bat  build-ffmpeg.py  cibuildpkg.py  clean-branches  clean-remote-branches  comptime.py  fetch-ffmpeg  fetch-vendor.json  fetch-vendor.py  ffmpeg-5.0.json  ffmpeg-6.0.json  ffmpeg-6.1.json  ffmpeg-7.0.json  ffmpeg-7.1.json  ffmpeg-8.0.json  ffmpeg-8.1.json  ffmpeg-latest.json  generate_audio.py  generate_video.py  inject-dll  inject-dll.py  sbom.py  test  test-setup  travis-before-install  travis-install  travis-setup  travis-test  vagrant-test
tests/: common.py  requirements.txt  test_audiofifo.py  test_audioformat.py  test_audioframe.py  test_audiolayout.py  test_audioresampler.py  test_bitstream.py  test_chapters.py  test_codec.py  test_codec_context.py  test_coders.py  test_colorspace.py  test_container.py  test_containerformat.py  test_datastream.py  test_decode.py  test_deprecation.py  test_device.py  test_dictionary.py  test_display_matrix.py  test_dlpack.py  test_doctests.py  test_encode.py  test_encoding.py  test_enum.py  test_enums.py  test_errors.py  test_file_probing.py  test_filters.py  test_frameindex.py  test_indexentries.py  test_logging.py  test_open.py  test_options.py  test_packet.py  test_python_io.py  test_random_input.py  test_rational.py  test_remux.py  (+7 more)
(+191 files in other folders)
