[build-system]
requires = ["setuptools", "cython"]

[tool.isort]
profile = "black"
known_first_party = ["av"]
skip = ["av/__init__.py"]

[tool.flake8]
filename = ["*.py", "*.pyx", "*.pxd"]
ignore = ["E203", "W503"]
max-line-length = 142
per-file-ignores = [
    "__init__.py:E402,F401",
    "*.pyx,*.pxd:E211,E225,E227,E402,E999",
]
