[build-system]
requires = ["setuptools>=77.0", "cython>=3.1.0a1,<4"]

[project]
name = "av"
description = "Pythonic bindings for FFmpeg's libraries."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    {name = "WyattBlue", email = "wyattblue@auto-editor.com"},
    {name = "Jeremy Lainé", email = "jeremy.laine@m4x.org"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
]
dynamic = ["version"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "av.about.__version__"}

[project.urls]
"Bug Tracker" = "https://github.com/PyAV-Org/PyAV/discussions/new?category=4-bugs"
"Source Code" = "https://github.com/PyAV-Org/PyAV"
homepage = "https://pyav.basswood-io.com"

[project.scripts]
"pyav" = "av.__main__:main"

[tool.isort]
profile = "black"
known_first_party = ["av"]
skip = ["av/__init__.py"]
