[flake8]
filename = *.py,*.pyx,*.pxd
ignore = E203,W503
max-line-length = 142
per-file-ignores = __init__.py: E402,F401 *.pyx,*.pxd: E211,E225,E227,E402,E999

[isort]
default_section = THIRDPARTY
from_first = 1
known_first_party = av
line_length = 88
lines_after_imports = 2
multi_line_output = 3
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = av/__init__.py

[metadata]
license = BSD
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Reports = https://github.com/PyAV-Org/PyAV/issues
    Documentation = https://pyav.org/docs
    Feedstock = https://github.com/conda-forge/av-feedstock
    Download = https://pypi.org/project/av
